--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
        data-bs-html="true"
        data-bs-placement="right"
        title="Basic Calcium Simulator Info"
-       data-bs-content="<alt='Basic Simulator' class='img-fluid'><p>Using a single compartment model explore how Ca<sup>2+</sup> dynamics are shaped by Calcium homeostatic mechanisms, and how different Ca<sup>2+</sup> indicators report Ca<sup>2+</sup>.</p>">
+       data-bs-content="">
       Complicated Astrocyte Calcium Model
     </a>
 
@@ -74,7 +74,7 @@
        data-bs-html="true"
        data-bs-placement="right"
        title="Missile Command Model"
-       data-bs-content="<img src='bouton4web.png' alt='Spatial Simulator' class='img-fluid'><p>Explore Ca<sup>2+</sup> dynamics in a synaptic nanodomain.  This simulator visualises sub-membrane Ca<sup>2+</sup> at a active zone with a central cluster of Ca<sup>2+</sup> entry sites.  Change buffer properties and add indicators to see how space shapes Ca<sup>2+</sup> signal transduction.</p>">
+       data-bs-content="">
       Missile Command Model
     </a>
   </div>
